Fix alignment issue

--- a/src/modules/components/productCarousel/ProductCarousel.module.css
+++ b/src/modules/components/productCarousel/ProductCarousel.module.css
@@ -29,6 +29,7 @@
   font-size: 1.5rem;
   font-weight: 800;
   letter-spacing: 1px;
+  text-align: center;
 }
 
 .pink__text {
